--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,22 @@
+/*Criando variaveis para cor*/
+:root{
+    --background-primary-color: #ffffff;                /*Criando variaveis para cor*/
+    --background-secondary-color: #f5f5f5;
+    --background-tertiary-color: #000000;
+
+    --butoon-primary-color: #8F0101;
+    --butoon-secondary-color: #B81515;
+
+    --text-primary-color: #222222;
+    --text-secondary-color: #FFFFFF;
+}
+
 /*CSS RESET*/
 body, img, h1, p, fieldset, legend, label, input, select, textarea, button{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+
 
