--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,25 @@
-/*Criando variaveis para cor*/
+@font-face{
+    font-family: "Montserrat";
+    src: url(../font/Montserrat-VariableFont_wght.ttf);
+    font-style: normal;
+    font-display: swap;
+}
+
+/*Criando variaveis para cor, peso dos textos*/
 :root{
-    --background-primary-color: #ffffff;                /*Criando variaveis para cor*/
+    --primary-color: #8F0101;
+    --secondary-color: #B81515; 
+
+    --background-primary-color: #ffffff;                
     --background-secondary-color: #f5f5f5;
     --background-tertiary-color: #000000;
-
-    --butoon-primary-color: #8F0101;
-    --butoon-secondary-color: #B81515;
-
+    
     --text-primary-color: #222222;
     --text-secondary-color: #FFFFFF;
+
+    --title-weight: 700;
+    --text-weight: 400;
+    --menu-text-weight: 500;
 }
 
 /*CSS RESET*/
