--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@ header{
     flex-direction: row; /*Configurando posição dos elementos do header*/
     justify-content: space-between; /*Configurando posição dos elementos do header*/
     padding: 38px 48px;
+    position: relative;
 }
 
 .logo {
@@ -16,10 +17,28 @@ header{
     margin-top: 24px;
 }
 
-input[type="checkbox"]:checked ~ nav{
+input[type="checkbox"]:checked ~ nav{ /*Tirar o quadradinho do checkbox*/
     display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: var(--background-tertiary-color);
 }
 
 nav{
     display: none;
+}
+
+.list-links{
+    list-style: none; /*Tirar os pontos da lista*/
+}
+
+.list-links li{
+    margin: 16px 0;
+}
+
+.list-links li a{
+    color: var(--text-secondary-color);
+    text-decoration: none;
 }
