--- a/css/header.css
+++ b/css/header.css
@@ -13,11 +13,19 @@ header{
     height: 64px;
 }
 
+.img-mobile{
+    display: block;
+}
+
+.img-desktop{
+    display: none;
+}
+
 .navigation-menu{
     margin-top: 24px;
 }
 
-input[type="checkbox"]:checked ~ nav{ /*Tirar o quadradinho do checkbox*/
+input[type="checkbox"]:checked ~ nav { /*Tirar o quadradinho do checkbox*/
     display: block;
     position: absolute;
     top: 100%;
@@ -48,7 +56,7 @@ nav{
 
   /*Formatando para tablet*/
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
     .navigation-menu{
         margin-top: 0;
         width: 467px;
@@ -71,5 +79,39 @@ nav{
 
     .navigation-menu li{
         margin: 0;
+    }
+}
+
+
+/*Formatando para Desktop*/
+
+@media screen and (min-width: 1024px) {
+    header{
+        padding: 38px 120px;
+    }
+
+    .logo{
+        width: 260px;
+        height: 64px;
+    }
+
+    .img-desktop{
+        display: block;
+    }
+
+    .img-mobile{
+        display: none;
+    }
+
+    .navigation-menu a:hover {
+        color: var(--primary-color);
+    }
+}
+
+
+
+@media screen and (min-width: 1024px) {
+    header{
+        padding: 38px 160px;
     }
 }
