--- a/css/global.css
+++ b/css/global.css
@@ -39,6 +39,29 @@ button {
   box-sizing: border-box;
 }
 
-body{
+body {
   font-family: "Montserrat", sans-serif;
+  color: var(--text-primary-color);
 }
+
+.section-title h2{
+  font-weight: var(--title-weight);
+  font-size: 28px;
+  margin: 0;
+  text-align: center;
+}
+
+.section-title hr{
+  width: 180px;
+  height: 4px;
+  background-color: var(--secondary-color);
+  border: none;
+  margin: 16px auto 32px auto;
+}
+
+ @media screen and (min-width: 768px) {
+  .section-title h2{
+    font-size: 32px;
+  }
+  
+ }
