--- a/css/global.css
+++ b/css/global.css
@@ -74,6 +74,17 @@ section.hero {
   margin: 16px auto 32px auto;
 }
 
+.content-title{
+  font-size: 20px;
+  font-weight: var(--title-weight);
+}
+
+.content-text{
+  font-size: 20px;
+  font-weight: var(--text-weight);
+  line-height: 32px;
+}
+
 .button {
   min-width: 280px;
   height: 64px;
