--- a/css/global.css
+++ b/css/global.css
@@ -77,6 +77,7 @@ section.hero {
 .content-title{
   font-size: 20px;
   font-weight: var(--title-weight);
+  margin: 0px 0px 24px;
 }
 
 .content-text{
