--- a/css/hero.css
+++ b/css/hero.css
@@ -1,7 +1,16 @@
-.hero-img {
+.hero .hero-img,
+.bottom-hero .hero-img {
   height: 400px;
   width: 100%;
+}
+
+.hero .hero-img {
   background: url(../img/hero-mobile.jpg) no-repeat;
+  background-size: cover;
+}
+
+.bottom-hero .hero-img {
+  background: url(../img/bg-bottom-hero-mobile.png) no-repeat;
   background-size: cover;
 }
 
@@ -21,6 +30,12 @@
     background-size: cover;
   }
 
+  .bottom-hero .hero-img {
+    height: 400px;
+    background: url(../img/bg-bottom-hero-tablet.png) no-repeat;
+    background-size: cover;
+  }
+
   .hero h2 {
     padding: 88px 60px;
     font-size: 32px;
@@ -31,6 +46,12 @@
   .hero-img {
     height: 620px;
     background: url(../img/hero-desktop.jpg) no-repeat;
+    background-size: cover;
+  }
+
+  .bottom-hero .hero-img {
+    height: 600px;
+    background: url(../img/bg-bottom-hero-desktop.png) no-repeat;
     background-size: cover;
   }
 
